If applied, this commit will add the support for the news source screen navigation when clicking on the newsScources option available on the home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyNewsApplicationProject</string>
+    <string name="news_sources">News Sources</string>
 </resources>
