--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MyNewsApplicationProject</string>
     <string name="news_sources">News Sources</string>
+    <string name="countries">Countries</string>
 </resources>
