--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MyNewsApplicationProject</string>
     <string name="news_sources">News Sources</string>
     <string name="countries">Countries</string>
+    <string name="languages">Languages</string>
 </resources>
